--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,11 +12,14 @@
         android:theme="@style/Theme.TidurLelap"
         tools:targetApi="31">
         <activity
-            android:name=".ResultActivity"
+            android:name=".ui.result.ResultActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.signup.SignUpActivity"
+            android:exported="false"/>
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false" />
@@ -25,7 +28,10 @@
             android:exported="false" />
         <activity
             android:name=".ui.welcome.WelcomeActivity"
-            android:exported="false" />
+            android:exported="false"
+           >
+
+        </activity>
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
@@ -35,6 +41,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
